--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ chardet==3.0.4
 colorama==0.3.9
 cryptography==2.8
 Django==2.1.1
+django-cors-headers==3.2.1
 djangorestframework==3.11.0
 docker==4.2.0
 docker-compose==1.25.4
